syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Protos/EssentialData/Common.proto";


option csharp_namespace = "DawnQuant.AShare.Api.EssentialData";

package DawnQuant.AShare.Api.EssentialData;


//股东
service HolderApi {
  
//获取股东人数
  rpc GetHolderNumber(GetHolderNumberRequest) returns (GetHolderNumberResponse);

  //保存股东人数数据
  rpc SaveHolderNumber(SaveHolderNumberRequest) returns (SaveHolderNumberResponse);


  //获取10大股东数据
  rpc GetTop10FloatHolder(GetTop10FloatHolderRequest) returns (GetTop10FloatHolderResponse);

  //保存10大股东数据
  rpc SaveTop10FloatHolder(SaveTop10FloatHolderRequest) returns (SaveTop10FloatHolderResponse);


}


message GetHolderNumberRequest
{
 string TSCode = 1;
 //开始日期
 google.protobuf.Timestamp SartDate  =2;
 //结束日期
 google.protobuf.Timestamp EndDate  =3;

}

message GetHolderNumberResponse
{
  repeated  HolderNumberDto Entities=1;
}


message SaveHolderNumberRequest
{
   repeated  HolderNumberDto Entities=1;
}

message SaveHolderNumberResponse
{
   repeated  HolderNumberDto Entities=1;
}





message GetTop10FloatHolderRequest
{
 string TSCode = 1;
 //开始日期
 google.protobuf.Timestamp SartDate  =2;
 //结束日期
 google.protobuf.Timestamp EndDate  =3;

}

message GetTop10FloatHolderResponse
{
  repeated  Top10FloatHolderDto Entities=1;
}


message SaveTop10FloatHolderRequest
{
   repeated  Top10FloatHolderDto Entities=1;
}

message SaveTop10FloatHolderResponse
{
   repeated  Top10FloatHolderDto Entities=1;
}











